# menuorg-print-cd

./: .gitignore  BUILD-INSTALLER.md  CHANGELOG.md  CHINESE_ENCODING_SOLUTION.md  CHINESE_ENCODING_USAGE_GUIDE.md  COMPLETE_PROJECT_GUIDE.md  Cargo.toml  DEBUG_SYSTEM_README.md  DUAL_ENGINE_GUIDE.md  ELECTRON_INTEGRATION_COMPLETE_GUIDE.md  HARDWARE_PRINT_FIX.md  LODOP_BLANK_PRINT_FIX.md  LODOP_FORMATTING_IMPROVEMENTS.md  LODOP_LAYOUT_OPTIMIZATION.md  LODOP_PRINT_FIX.md  LODOP_WIDTH_FIX.md  Microsoft Print to PDF  PRINTER_TROUBLESHOOTING_GUIDE.md  PRINT_SETTINGS_REMOVAL_SUMMARY.md  PrintType分菜打印说明.md  QUICK_REFERENCE.md  README.md  RUST_INTEGRATION.md  TECHNICAL_DETAILS.md  THERMAL_RECEIPT_SYSTEM_COMPLETE.md  WEBSOCKET_RECONNECT_FEATURE.md  XP-80C  api (1).html  build-all-targets.bat  build-config.js  chinese_printer_usage_example.md  clodop.txt  demo-simple.js  demo-thermal-receipt.html  generate-icons.bat  generate-icons.js  main copy.rs  main.js  main.rs  order.json  (+25 more)
assets/: README-ICONS.txt  create-simple-icons.html  create-tray-icon.html  图标生成指南.md
dist2/win-unpacked/resources/: app.asar
installer/: installer-script.nsh
renderer/: LodopFuncs.js  build-config.json  debug-test.html  index.html  print-maintenance-demo.html
renderer/css/: style.css
renderer/js/: api.js  app.js  printer-manager.js  printer.js  websocket.js
src/: main copy.rs  main.rs  printer-hybrid.js  printer-lodop copy.js  printer-lodop.js  printer-native.js  printer.js  test.rs
