[package]
name = "printer-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "printer-engine"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
# 编码支持
encoding_rs = "0.8"
# 字符集检测
chardet = "0.2"
# 正则表达式
regex = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winbase",
    "wingdi",
    "winspool",
    "winuser",
    "errhandlingapi",
    "handleapi",
    "std",
] }

[profile.release]
lto = true
panic = "abort"