[package]
name = "printer-engine"
version = "0.1.0"
edition = "2021"
description = "高性能热敏打印机引擎，支持Win7/8/10+和32/64位架构"
authors = ["Printer Team"]
license = "MIT"
readme = "README.md"

[[bin]]
name = "printer-engine"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
# 编码支持
encoding_rs = "0.8"
# 字符集检测
chardet = "0.2"
# 正则表达式
regex = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winbase",
    "wingdi",
    "winspool",
    "winuser",
    "errhandlingapi",
    "handleapi",
    "std",
    "sysinfoapi",  # 添加系统信息API，用于版本检测
    "minwinbase",  # 添加最小Windows基础API
] }

# 为不同架构优化编译配置
[profile.release]
lto = true
panic = "abort"
# 优化老系统兼容性
opt-level = 2  # 降低优化等级，提高兼容性
debug = false
strip = true

# 开发配置，快速编译
[profile.dev]
opt-level = 0
debug = true

# 特定目标配置
[target.'cfg(target_arch = "x86")'.dependencies]
# 32位特定依赖（如果需要）

[target.'cfg(target_arch = "x86_64")'.dependencies]
# 64位特定依赖（如果需要）