[package]
name = "printer-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "printer-engine"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winspool", "errhandlingapi", "minwindef", "ntdef"] }

[profile.release]
lto = true
panic = "abort"